<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">


  <TextView
    android:id="@+id/question_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:padding="24dp"
    android:textColor="#000000"
    android:textSize="20sp"
    tools:text="@string/question_1" />

  <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="14dp">

    <RadioButton
      android:id="@+id/radio_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/answer_1_1"
      android:layout_weight="1"
      android:layout_marginBottom="5dp"
      android:checked="false"/>

    <RadioButton
      android:id="@+id/radio_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/answer_1_2"
      android:layout_marginBottom="5dp"
      android:checked="false"/>

    <RadioButton
      android:id="@+id/radio_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/answer_1_3"
      android:layout_marginBottom="5dp"
      android:checked="false"/>

  </RadioGroup>


  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/prev_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/arrow_left"
      android:drawableRight="@drawable/arrow_left"/>


    <Space
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:minWidth="10dp"/>

    <ImageButton
      android:id="@+id/next_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/arrow_right"
      android:drawableRight="@drawable/arrow_right"/>

  </LinearLayout>

  <Button
    android:id="@+id/cheat_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/cheat_button" />

  <Button
    android:id="@+id/show_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/show_result"/>

  <Button
    android:id="@+id/exit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="Закрыть"/>

</LinearLayout>