<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  tools:context=".Results">

    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/results"
      android:textColor="#000000"
      android:textSize="20sp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="40dp">

    </TextView>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

        <TextView
          android:id="@+id/questionName"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:layout_marginLeft="50dp"
          android:text="@string/questions"
          android:layout_marginStart="50dp" />

        <Space
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:minWidth="100dp"/>

        <TextView
          android:id="@+id/answerName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:text="@string/answers"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerView"
          android:layout_width="0dp"
          android:layout_height="330dp"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          tools:listitem="@layout/recyclerview_item"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
      android:id="@+id/score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="9/10"
      android:layout_marginTop="20dp"
      android:textColor="#000000"
      android:textSize="30sp"/>

    <Button
      android:id="@+id/exit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/close"/>

</LinearLayout>
